--- a/web-client/views/index.haml
+++ b/web-client/views/index.haml
@@ -1,9 +1,9 @@
 %html
   %head
     %title LeanMap
-    %script{ type: 'text/javascript', src: 'javascripts/jquery-1.6.2.min.js' }
-    %script{ type: 'text/javascript', src: 'javascripts/leaflet.js' }
-    %link{ rel: 'stylesheet', href: 'javascripts/leaflet.css' }
+    %script{ type: 'text/javascript', src: 'http://code.jquery.com/jquery-1.10.2.min.js' }
+    %script{ type: 'text/javascript', src: 'http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js' }
+    %link{ rel: 'stylesheet', href: 'http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css' }
   %body
     %div{ id: 'mapContainer', style: 'width: 800px; height: 600px;' }
       :javascript
