--- a/web-client/public/stylesheets/style.css
+++ b/web-client/public/stylesheets/style.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+#map {
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  margin: 0;
+  padding: 0;
+}
