--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -1,38 +1,21 @@
 extends layout
 
 block content
-  div.navbar.navbar-inverse.navbar-fixed-top
-    div.container
-      div.navbar-header
-        button.navbar-toggle(type="button", data-toggle="collapse", data-target=".navbar-collapse")
-          span.sr-only Toggle navigation
-          span.icon-bar
-          span.icon-bar
-          span.icon-bar
-        a.navbar-brand(href="#") Transitr
-      div.navbar-collapse.collapse
-        ul.nav.navbar-nav
-          li.active
-            a(href="#") Home
-          li
-            a(href="#about") About
-          li
-            a(href="#contact") Contact
-          li.dropdown
-            a.dropdown-toggle(href="#", data-toggle="dropdown") Dropdown
-              b.caret
-            ul.dropdown-menu
-              li
-                a(href="#") Action
-              li
-                a(href="#") Another action
-              li
-                a(href="#") Something else here
-              li.divider
-              li.dropdown-header Nav header
-              li
-                a(href="#") Separated link
-              li
-                a(href="#") One more separated link
+
+  h1 LA Metro Bus Routes
+  table.table.table-hover
+    thead
+      tr
+        th Route #
+        th Route
+        th
+    tbody
+      - each route in routes
+        tr
+          th= route.id
+          th= route.display_name
+          th
+            a(href="#")
 
 
+  script(src='/javascripts/index.js')
