added functionality to display info about a single route and its stops

--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -15,7 +15,7 @@ block content
           th= route.id
           th= route.display_name
           th
-            a(href="#")
+            a(href="/route/" + route.id)
 
 
-  script(src='/javascripts/index.js')
+  script(src='/javascripts/table-row-link.js')
