--- a/web-client/views/layout.jade
+++ b/web-client/views/layout.jade
@@ -15,11 +15,11 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href="#") Transitr
+          a.navbar-brand(href="/") Transitr
         div.navbar-collapse.collapse
           ul.nav.navbar-nav
             li.active
-              a(href="#") Routes
+              a(href="/") Routes
             li
               a(href="#") Timetables
             li
