--- a/web-client/views/index.jade
+++ b/web-client/views/index.jade
@@ -11,7 +11,7 @@ block content
         th
     tbody
       - each route in routes
-        tr
+        tr.tr-linkable
           th= route.id
           th= route.display_name
           th
